# commagents

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_zh.md  DEV_WORKFLOW.md  Makefile  PROGRESS.md  README.md  README_zh.md  REQUIREMENTS.md  SPEC.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_avatar_workshop.py  test_infrastructure.py
agents/: football_commentary_team.py  playbyplay_commentator.py  show_host.py  tactical_analyst.py
agents/avatar/: __init__.py  avatar_api_client.py  avatar_content_generator.py  avatar_knowledge_base.py  avatar_personality.py  base_avatar_agent.py
config/: config2.example.yaml  football_avatar.yaml
core/: __init__.py  base_agent.py  config_manager.py  platform_manager.py
docs/: ROLLBACK_PROCEDURES.md
docs/archived_plans/: phase3_original_video_production.md
examples/: README.md  __init__.py
examples/football_commentary/: README.md  __init__.py  football_commentary_team.py  playbyplay_commentator.py  show_host.py  tactical_analyst.py  test_commentary.py
management/: __init__.py  avatar_config_manager.py  avatar_monitor.py  knowledge_injector.py
tools/: __init__.py  mcp_client.py
utils/: __init__.py  logger.py
workflows/: __init__.py  event_dispatcher.py  n8n_client.py  workflow_manager.py
